added checkstyle step to buiéd script