@@ -4,6 +4,7 @@ plugins {
   id 'application'
   id 'com.github.johnrengelman.shadow' version '7.1.2'
   id 'org.javamodularity.moduleplugin' version '1.8.12'
+  id 'checkstyle'
 }
 
 group 'com.example'
@@ -21,7 +22,6 @@ java {
 dependencies {
   implementation 'org.openjfx:javafx-controls:19'
   implementation 'org.openjfx:javafx-fxml:19'
-  // Add other JavaFX modules as needed
 }
 
 javafx {
@@ -39,9 +39,6 @@ jar {
     attributes(
             'Main-Class': 'airship.Main'
     )
-//    from {
-//      configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-//    }
   }
 }
 
@@ -56,20 +53,8 @@ shadowJar {
   configurations = [project.configurations.runtimeClasspath]
 }
 
-//run {
-//   Use the 'runtimeClasspath' configuration for JavaFX modules
-//  jvmArgs = [
-//          '--module-path', configurations.runtimeClasspath.asPath,
-//          '--add-modules', 'javafx.controls,javafx.fxml'
-//  ]
-//}
-
-//tasks.withType(JavaExec) {
-  // Ensures that all JavaExec tasks (including 'run') use the correct module path
-//  doFirst {
-//    jvmArgs = [
-//            '--module-path', configurations.runtimeClasspath.asPath,
-//            '--add-modules', 'javafx.controls,javafx.fxml'
-//    ]
-//  }
-//}
+checkstyle {
+  toolVersion = '10.12.1'
+  maxWarnings = 0
+  configFile = file('checkstyle.xml')
+}
